Mobile menu 2, almost fix animation mobile menu, change html

--- a/src/dummy/Menu/Menu.css
+++ b/src/dummy/Menu/Menu.css
@@ -16,6 +16,8 @@ $content-padding-desktop: 4rem; /* width */
   font-family: 'Courier New';
   font-weight: bold;
 
+  border: 1px solid red;
+
   z-index: 1;
 
   .background {
@@ -60,119 +62,155 @@ $content-padding-desktop: 4rem; /* width */
 
       transition: all 0.3s ease-in-out;
     }
+  }
+}
 
-    &__mobile {
-      display: none;
-      flex: 1;
+.navigation__mobile {
+  display: none;
+}
 
-      align-content: center;
 
-      transition: all 0.3s ease-in-out;
-
-      &_arrow {
-        padding: 1.5rem;
-        cursor: pointer;
-        transition: all 0.3s ease-in-out;
-      }
-
-      .arrow-up {
-        transform: rotateZ(90deg);
-      }
-
-      .arrow-down {
-        transform: rotateZ(270deg);
-      }
-
-      &_wrapper {
-        position: absolute;
-        top: 100%;
-        left: 0;
-
-        width: 100vw;
-
-        overflow: hidden;
-
-        .mobile-menu__list {
-          background-color: white;
-
-          transition: all 0.3s ease-in-out;
-
-          &__background {
-            position: fixed;
-            top: 0;
-
-            display: flex;
-            height: 100vh;
-            width: 100vw;
-
-            content: '';
-
-            background: #00000099;
-            opacity: 1;
-            transition: all 0.3s ease-in-out;
-
-            z-index: -1;
-
-            &_hide {
-              opacity: 0;
-            }
-          }
-
-          &_hide {
-            transform: translateY(-100%);
-          }
-        }
-      }
+@media screen and (max-width: 1000px) {
+  .navigation {
+    &__item {
+      padding: $menu-height-padding calc($menu_navigation-items-padding * 0.7);
+      font-size: 0.9rem;
     }
   }
+}
 
-  @media screen and (max-width: 1000px) {
-    .navigation {
-      &__item {
-        padding: $menu-height-padding calc($menu_navigation-items-padding * 0.7);
-        font-size: 0.9rem;
-      }
-    }
-  }
-
-  @media screen and (max-width: 768px) {
+@media screen and (max-width: 768px) {
+  .menu-wrapper {
     padding: $menu-top-margin 1rem 0 1rem;
 
     .navigation {
       display: none;
     }
 
-    .navigation__mobile {
+    .navigation__mobile_arrow {
+      /* position: relative; */
       display: flex;
       align-items: center;
       justify-content: center;
 
-      .navigation__item {
-        display: flex;
-        align-items: center;
-        justify-content: center;
+      width: 1.5rem;
+      height: 1.5rem;
 
-        padding: calc(0.8 * $menu-height-padding) $menu_navigation-items-padding;
+      padding: 1rem;
+      cursor: pointer;
+      transition: all 0.3s ease-in-out;
+    }
 
-        border: 1px solid #0000000f;
+    .arrow-up {
+      transform: rotateZ(90deg);
+    }
 
-        box-sizing: border-box;
+    .arrow-down {
+      transform: rotateZ(270deg);
+    }
 
-        font-size: 1.1rem;
+    &_static {
+      position: sticky;
+
+      top: -40px;
+
+      .navigation__item,
+      /* .navigation__mobile, */
+      .logo {
+        padding-top: 3.8rem;
+        padding-bottom: 1.2rem;
+      }
+
+      .mobile-menu__list {
+        /* top: 40px; */
+        /* transform: translateY(40px) !important; */
+
+        border: 10px solid blue;
+      }
+
+      .navigation__mobile_arrow {
       }
     }
   }
 
-  &_static {
-    position: sticky;
+  .navigation__mobile_wrapper {
+    position: absolute;
+    display: flex;
+    width: 100vw;
+    height: 100%;
 
-    top: -40px;
+    bottom: 0;
+    left: 0;
 
-    .navigation__item,
-    .navigation__mobile,
-    .logo {
-      padding-top: 3.8rem;
-      padding-bottom: 1.2rem;
+    border: 5px solid blueviolet;
+
+    transition: all 0.3s ease-in-out;
+    z-index: -1;
+
+    /* overflow: hidden; IMPORTANT hide menu items!!! */
+
+    .navigation__mobile {
+      position: absolute;
+      display: block;
+      /* top: 10px; */
+      bottom: 0;
+      left: 0;
+
+      width: 100vw;
+      height: 0%;
+
+      border: 4px  solid green;
+
+      .mobile-menu__list {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        background-color: white;
+
+        border: 5px solid blueviolet;
+
+        transition: all 0.3s ease-in-out;
+        transform: translateY(0);
+
+        /* &__background {
+          position: fixed;
+          top: 0;
+
+          display: flex;
+          height: 100vh;
+          width: 100vw;
+
+          content: '';
+
+          background: #00000099;
+          opacity: 1;
+          transition: all 0.3s ease-in-out;
+
+          z-index: -1;
+
+          &_hide {
+            opacity: 0;
+          }
+        } */
+
+        &_hide {
+          transform: translateY(-100%);
+        }
+      }
     }
+  }
+
+  .navigation__item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    padding: calc(0.8 * $menu-height-padding) $menu_navigation-items-padding;
+
+    border: 1px solid #0000000f;
+
+    box-sizing: border-box;
+
+    font-size: 1.1rem;
   }
 }
